# transcription_tools

./: .gitignore  README.md
include/: filedialog.h
src/: CMakeLists.txt  filedialog.cpp  main.cpp
